# fider-mcp

./: .gitignore  README.md  index.js  mcp_server_fider.py  package-lock.json  package.json  pyproject.toml
