[project]
name = "mcp-fider"
version = "2025.06.27.160000"
description = "MCP (Model Context Protocol) server for Fider API integration"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Ringostat", email = "info@ringostat.com" }
]
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.9.0",
]

[project.urls]
Homepage = "https://github.com/ringostat/fider-mcp"
Issues = "https://github.com/ringostat/fider-mcp/issues"

[project.scripts]
mcp-fider = "mcp_server_fider:main"

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]